force-app/main/default/objects/Goods_Received_Note_Item__c/Goods_Received_Note_Item__c.object-meta.xml
<CustomObject>
    <label>Goods Received Note Item</label>
    <nameField>
        <displayFormat>GRNI-{0000}</displayFormat>
        <label>Goods Received Note Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods Received Note Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>