force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Distributor_Stock__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Stock__c</fullName>
    <label>Distributor Stock</label>
    <referenceTo>Distributor_Stock__c</referenceTo>
    <relationshipLabel>Goods Received Note Items</relationshipLabel>
    <relationshipName>Goods_Received_Note_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>