force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Goods_Received_Note__c.field-meta.xml
<CustomField>
    <fullName>Goods_Received_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods Received Note</label>
    <referenceTo>Goods_Received_Note__c</referenceTo>
    <relationshipLabel>Goods Received Note Items</relationshipLabel>
    <relationshipName>Goods_Received_Note_Items</relationshipName>
    <type>Lookup</type>
</CustomField>