force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <label>Invoice Item</label>
    <referenceTo>Invoice_item__c</referenceTo>
    <relationshipLabel>Goods Received Note Items</relationshipLabel>
    <relationshipName>Goods_Received_Note_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>