force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <label>Invoiced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>