force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Goods Received Note Items</relationshipLabel>
    <relationshipName>Goods_Received_Note_Items</relationshipName>
    <type>Lookup</type>
</CustomField>