force-app/main/default/objects/Goods_Received_Note_Item__c/fields/Received_Saleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Received_Saleable_Quantity__c</fullName>
    <label>Received Saleable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>